--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <div class="developer">
             <h2>Steve Crane</h2>
             <img src="/Users/stephencrane/dev/power/defenders/pairing-projects/steve_and_jon_first_git_project/img/StephenCrane.jpg" width="100" height="100">
+            <p class="Favorite-Website"> Favorite Website: <a href="https://www.reddit.com" target="_blank">Reddit</a></p>
         </div>
         <div class="developer">
             <h2>Jonathan Gonzalez</h2>
             <img src="/Users/stephencrane/dev/power/defenders/pairing-projects/steve_and_jon_first_git_project/img/JonGonzalez.jpg" width="100" height="100">
+                <p class="Favorite-Website"> Favorite Website: <a href= "https://nitro.powerhrg.com/sessions/login" target="_blank">Nitro</a></p>
         </div>
     </body>
 </html>
