--- a/index.html
+++ b/index.html
@@ -16,5 +16,27 @@
             <img src="img/JonGonzalez.jpg" alt="Jonathan Gonzalez" width="100" height="100">
                 <p class="Favorite-Website"> Favorite Website: <a href= "https://nitro.powerhrg.com/sessions/login" title= "Jons favorite website" target="_blank">Nitro</a></p>
         </div>
+        <div class="food">
+            <h2>Steve's Favorite Foods</h2>
+            <ol>
+                <li>Baked Ziti</li>
+                <li>Burrito</li>
+                <li>Pizza</li>
+            </ol>
+        </div>
+        <div class="food">
+            <h2>Jon's Favorite Foods</h2>
+            <ol>
+                <li>Tacos</li>
+                <li>Pizza</li>
+                <li>Fried Zucchini</li>
+            </ol>
+        </div>
+        <div class="food">
+            <a href="https://www.budgetbytes.com/classic-baked-ziti/" title="baked ziti" target="blank"><img src="img/baked-ziti.jpg" alt="baked ziti" width="100" height="100"></a>
+        </div class="food">
+        <div class="food">
+            <a href="https://en.wikipedia.org/wiki/Taco" title="tacos" target="blank"><img src="img/Tacos.jpg" alt="tacos" width="100" height="100"></a>
+        </div>
     </body>
 </html>
